--- a/chinese-remainder-theorem/preembles/all.tex
+++ b/chinese-remainder-theorem/preembles/all.tex
@@ -1,6 +1,7 @@
 \input{./preembles/packages.tex}
 \input{./preembles/setting/listing.tex}
 \input{./preembles/setting/math.tex}
+\input{./preembles/macros/macro.tex}
 
 %------------------------------------------------------------------------
 % change font size of section and subsection title
@@ -13,7 +14,4 @@
 %------------------------------------------------------------------------
 %\setlength{\columnsep}{3zw}
 \setcounter{tocdepth}{3}                       % chenge the depth displayed in the table of contents
-
-\fontsize{11pt}{18pt}
-\selectfont
 
