--- a/chinese-remainder-theorem/preembles/packages.tex
+++ b/chinese-remainder-theorem/preembles/packages.tex
@@ -1,33 +1,57 @@
 %------------------------------------------------------------------------
 % usepackages
 %------------------------------------------------------------------------
-\usepackage{titlesec}                   % セクションとかのサイズ変更
-\usepackage{tabularx}                   % 表
-\usepackage{here}                       % 画像をこ↑こ↓に表示する
-\usepackage[dvipdfmx]{graphicx}         % 画像表示
-\usepackage[dvipsnames,svgnames,x11names,dvipdfmx,table,xcdraw]{xcolor}     % what's ?
-\usepackage{url}                        % 参考文献にURL
-%\usepackage[pass]{geometry}             % ジオメトリの設定はしない[pass]で，geometryパッケージが持つ出力用紙サイズの設定機能のみを利用する(なんかdvipdfmxだとまずいらしい)
-\usepackage{listings, jlisting}         % ソースコード表示用
-\usepackage[uplatex]{otf}               % 欧文フォントの書式を変えたときに連動して和文フォントの書式も変わるように
-\usepackage[T1]{fontenc}                % フォントエンコードをT1(8bit)に変える
-\usepackage{lmodern}                    % 欧文フォントをデフォのCMから，CMの完全上位互換のLatin Modernフォントにする
-\usepackage{fix-cm}                     % デフォの欧文フォントのサイズ設定時に強制的に定義済みの別の値に丸められる問題の解決のため
-\usepackage{exscale}                    % 大型演算子(総和とか総乗とかインテグラルとか)のサイズがどんなときも一定なの対策
+% 使用可能な色を増やす
+\usepackage[dvipsnames,svgnames,x11names,dvipdfmx,table,xcdraw]{xcolor}
+% 画像読込みを可能に
+\usepackage[dvipdfmx]{graphicx}
+% レイアウト変更用
+\usepackage{geometry}
+% 出力用紙サイズのみの変更
+\usepackage{bxpapersize}
+% セクションのサイズ等を変更
+\usepackage{titlesec}
+% テーブルのセル内で改行を可能に
+\usepackage{tabularx}
+% 画像の位置を書いた位置に矯正
+\usepackage{here}
+% url の表示を可能に
+\usepackage{url}
+% ソースコード表示用
+\usepackage{listings, jlisting}
+% otf フォントを使用可能に
+\usepackage[uplatex]{otf}
+% フォントエンコーディングをT1に変更し、欧文フォントのデフォルトを Latin Modern に変える
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 
-\usepackage{amsmath, amssymb}           % 数式系
-\usepackage{diffcoeff}                  % 微分がきれいにかけるって
-\usepackage{newtxmath, newtxtext}       % 数式フォント, 欧文フォント
-%\usepackage{newpxmath, newpxtext}       % 数式フォント, 欧文フォント
-\usepackage{bm}                         % 太字
-\usepackage{mathtools}                  % \mathtoolsset{showonlyrefs=true} で参照した数式のみに数式番号をつける (cleveref) と共存できない
-\mathtoolsset{showonlyrefs=true}
+% 図を複数個同一環境にならべたときにキャプションを個別につけられるように
+\makeatletter
+\let\MYcaption\@makecaption
+\makeatother
+\usepackage{subcaption}
+\captionsetup{compatibility=false}
+\makeatletter
+\let\@makecaption\MYcaption
+\makeatother
 
-\usepackage[at]{easylist}               % 箇条書きを簡単に書けるように
+% 数式系
+\usepackage{amsmath, amssymb}
+\usepackage{diffcoeff}
+\usepackage{newtxmath, newtxtext}
+\usepackage{bm}
+\usepackage{ascmac}
+% hyperlink
+\usepackage[dvipdfmx, bookmarkstype=toc, colorlinks=true, linkcolor=cyan, pdfborder={0 0 0}, bookmarks=true, bookmarksnumbered=true, hypertexnames=false]{hyperref}
+\usepackage{pxjahyper}
+% 参照を便利に
+\usepackage{cleveref}
+% 参照した数式のみに数式番号をつける
+\usepackage{autonum}
+% 数学系いろいろ
+\usepackage{mathtools}
 
+% SI単位用
 \usepackage{siunitx}                    % SI
 
-% hyperlink
-\usepackage[dvipdfmx, bookmarkstype=toc, colorlinks=true, linkcolor=cyan, pdfborder={0 0 0}, bookmarks=true, bookmarksnumbered=true]{hyperref}
-\usepackage{pxjahyper}
 
