add tex project templates that are submodule

--- a/algebra/master.tex
+++ b/algebra/master.tex
@@ -3,7 +3,7 @@
 %------------------------------------------------------------------------
 % プリアンブル読み込み
 %------------------------------------------------------------------------
-\input{./preembles/all.tex}
+\input{./preambles/all.tex}
 
 
 \title{代数学}
