--- a/chinese-remainder-theorem/master.tex
+++ b/chinese-remainder-theorem/master.tex
@@ -3,10 +3,10 @@
 %------------------------------------------------------------------------
 % プリアンブル読み込み
 %------------------------------------------------------------------------
-\input{./preembles/all.tex}
+\input{./preambles/all.tex}
 
 
-\title{代数学}
+\title{中国剰余定理}
 \author{}
 \date{}
 
