renamed master.tex to master.ltx

--- a/neural-network/master.ltx
+++ b/neural-network/master.ltx
@@ -34,9 +34,24 @@
       \subsubsection{学習と自己組織化}
 
   \section{階層型ニューラルネットワークの情報処理}
-    \subsection{パーセプトロン} % 担当1
+    階層型ニューラルネットワークは心理学者ローゼンブラットによって提案されたパーセプトロンから発展したものである。
+    パーセプトロンはパターンを学習・識別することができるニューラルネットワークであり、形式ニューロンとシナプスの可塑性を用いている。
+    また、小脳においてパーセプトロンと類似した機能を有する部分があると指摘されている。
+    本章ではパーセプトロンはら発展した階層型ニューラルネットワークについて述べる。
+    ニューラルネットワークによる応用のうちで最も多いのが、階層型ニューラルネットワークのバックプロパゲーションである。
+    %担当1始め
+    \subsection{パーセプトロン}
+      パーセプトロンは3つの層からなる階層型ニューラルネットワークである。
+      パーセプトロンを構成する3つの層はそれぞれ感覚ユニット(sensory unit)、連合ユニット(associate unit)、反応ユニット(response unit)と呼ばれる。
+      パーセプトロンの基本形である単純パーセプトロンは感覚ユニットから連合ユニット、連合ユニットから反応ユニットへと一方向に繋がっている。
+      また反応ユニットは1つのニューロンによって構成され、連合ユニットの全てのニューロンと接続される。
+      % TODO: P15
+      \begin{gather}
+       a a_1
+      \end{gather}
       \subsubsection{単純パーセプトロン}
       \subsubsection{単純パーセプトロンの学習}
+    %担当1終り
     \subsection{バックプロパゲーション}
       \subsubsection{一般化デルタ則}
       \subsubsection{バックプロパゲーション}
