--- a/neural-network/master.ltx
+++ b/neural-network/master.ltx
@@ -48,8 +48,21 @@
 %             合計 : 11:00
 % [0410]
 %   03:30 - 04:30 -> 01:00
-%   00:00 - 00:00 -> 00:00
+%   06:15 - 06:30 -> 00:15
+%   09:00 - 10:55 -> 01:55 -- 研究紹介
+%   11:00 - 13:00 -> 02:00 -- ゼミ資料作成
+%   15:00 - 16:00 -> 01:00 -- ゼミ資料作成
+%   16:00 - 17:45 -> 01:45
+%             合計 : 05:00
+% [0413]
+%   09:00 - 11:00 -> 02:00 -- ゼミ
+%   11:00 - 13:00 -> 02:00 -- 
 %             合計 : 00:00
+% [0414]
+%   09:00 - 10:00 -> 01:00
+%   11:00 - 14:00 -> 03:00
+%   15:00 - 19:00 -> 04:00
+%             合計 : 08:00
 % [0000]
 %   00:00 - 00:00 -> 00:00
 %             合計 : 00:00
