--- a/neural-network/master.ltx
+++ b/neural-network/master.ltx
@@ -3,7 +3,8 @@
 %------------------------------------------------------------------------
 % プリアンブル読み込み
 %------------------------------------------------------------------------
-\input{./preambles/all.tex}
+%\input{./preambles/all.tex}
+\usepackage{./preambles/ownpack}
 
 % ベクトルコマンド
 \newcommand{\vect}[1]{\mathbf{#1}}
