use own package

--- a/algebra/master.ltx
+++ b/algebra/master.ltx
@@ -3,7 +3,7 @@
 %------------------------------------------------------------------------
 % プリアンブル読み込み
 %------------------------------------------------------------------------
-\input{./preambles/all.tex}
+\usepackage{./preambles/ownpack}
 
 
 \title{代数学}
