--- a/chinese-remainder-theorem/master.ltx
+++ b/chinese-remainder-theorem/master.ltx
@@ -3,7 +3,8 @@
 %------------------------------------------------------------------------
 % プリアンブル読み込み
 %------------------------------------------------------------------------
-\input{./preambles/all.tex}
+\usepackage{./preambles/ownpack}
+
 
 
 \title{中国剰余定理}
