--- a/neural-network/master.ltx
+++ b/neural-network/master.ltx
@@ -563,7 +563,7 @@
           出力値 & 2値 & 実数上の開区間$(0, 1)$ \\
           入出力関数 & ステップ関数 & シグモイド関数 \\
           学習する値 & 中間層と出力層の間のシナプス結合荷重と出力層のしきい値 & 任意のシナプス結合荷重としきい値 \\
-          終了条件 & シナプス結合荷重の変化が一定値以下になること & 2乗誤差が一定値以下になること \\ \hline
+          終了条件 & 一定回数繰り返しても収束しない場合 & 2乗誤差が一定値以下になること \\ \hline
         \end{tab}
         %TODO: 誤差逆伝搬法は誤り訂正法をより一般化したものであるといえる ...???
 
