reflected the questions from the seminar

--- a/neural-network/master.ltx
+++ b/neural-network/master.ltx
@@ -57,13 +57,17 @@
 %             合計 : 05:00
 % [0413]
 %   09:00 - 11:00 -> 02:00 -- ゼミ
-%   11:00 - 13:00 -> 02:00 -- 
+%   11:00 - 13:00 -> 02:00
 %             合計 : 00:00
 % [0414]
 %   09:00 - 10:00 -> 01:00
 %   11:00 - 14:00 -> 03:00
 %   15:00 - 19:00 -> 04:00
 %             合計 : 08:00
+% [0415]
+%   09:00 - 12:00 -> 03:00 -- ゼミ
+%   12:00 - 00:00 -> 00:00
+%             合計 : 00:00
 % [0000]
 %   00:00 - 00:00 -> 00:00
 %             合計 : 00:00
@@ -86,34 +90,69 @@
 
   \section{ニューラルネットワークとは何か}
     \subsection{生物に学ぶ}
-      \subsubsection{蚊と蟻とサッカーロボット}
+      \subsection{脳の神経細胞}
+        神経細胞には大きくわけて
+        \begin{itemize}
+          \item 錐体細胞(pyramidal cell)
+          \item プルキンエ細胞(purkinje cell)
+          \item 星状膠細胞(astrocyte)
+        \end{itemize}
+        の3つがある。
+        この3つのうち錐体細胞は脳の70から85\%を占める。
+        神経細胞を三角で表すことがあるのは、この錐体細胞が三角形に見えるからである。
 
       \subsubsection{神経細胞の構造と機能}
-        神経細胞は大きく細胞体(soma)、樹状突起(dendrite)、軸索(axon)によって構成される。
-        また、細胞体は核(nucleus)を細胞膜(cell membrance)が包んだものである。
-        樹状突起は細胞体からつきだしているものであり、軸索は他の神経細胞の細胞体もしくは樹状突起へつながっている。
+        神経細胞は大きく
+        \begin{description}
+          \item[細胞体(soma)] 核(nucleus)を細胞膜(cell membrance)が包んだもの
+          \item[樹状突起(dendrite)] 樹状突起は細胞体からつきだしているもの
+          \item[軸索(axon)] 他の神経細胞の細胞体もしくは樹状突起へ繋がっているもの
+        \end{description}
+        によって構成される。
         軸索と他の神経細胞との結合部分をシナプス(synapse)という。
-        神経細胞同士は信号をやりとりすることができ、信号のやりとりはシナプスで行なわれる。
-        信号を伝えるときは神経細胞が軸索からシナプスを通り他の神経細胞へ伝え、信号を受け取るとき他の神経細胞からシナプスを介して細胞膜もしくは樹状突起で受け取る。
 
-        入力信号のないときの膜電位を静止電位(resting potential)という。
-        神経細胞内と体液内にはイオンが含まれているが、神経細胞内と体液内には電位差が存在する。
-        体液に対する神経細胞内の電位を膜電位(membrance potential)という。
-        細胞膜は体液内や神経細胞内に含まれるイオンを通したり通さなかったりする。
-        この細胞膜のイオンに対する透過性によって膜電位が決定される。
+        体液内と細胞内にはイオンが存在している。
+        体内のイオンのうち神経細胞の働きに大きく影響を与えるのはナトリウムイオンとカリウムイオンである。
+        通常、体液内にはナトリウムイオンが多く存在し、細胞内にはカリウムイオンが多く存在する。
+        また細胞膜にはイオンチャネルが存在し、イオンチャネルが開いていると特定のイオンがイオンチャネルを通過することができる。
+        細胞内と体液内には電位差があり、体液内に対する細胞内の電位を膜電位(membrance potential)という。
 
-        他の神経細胞から信号を受け取ると細胞膜の透過性が変わり、膜電位が上昇する。
-        上昇して少しすると細胞膜の透過性が変わり膜電位が静止電位まで戻る。
-        このように膜電位が一定の値を越えることを神経細胞が興奮(excite)するもしくは発火(fire)するという。
-        また神経細胞が興奮するときに膜電位が越える電位の値をしきい値(threshold)という。
-        静止電位は通常負であり、興奮することで膜電位が正になったときの電位を活動電位(action potential)という。
+        神経細胞の細胞膜に存在するカリウムイオンチャネルは通常開いており、カリウムイオンが常に細胞内と体液内を行き来することができる。
+        他に、電位依存性のナトリウムイオンチャネルや電位依存性のカリウムイオンチャネルが存在し、どちらも通常は閉じている。
+        % ナトリウムポンプは?
+        また細胞はDNAによってタンパク質を常に製造しており、タンパク質は負の電荷を帯びている。
+        よって体液内のカリウムイオン(1荷の正イオン)が体液内と細胞内の電位差によって細胞内に入ってくる。
+        しかし、一定数のカリウムイオンが細胞内に入ると濃度の差によりカリウムイオンは細胞内から体液内へと移動する。
+        通常時はこのカリウムイオンの出入りが安定した状態になる。
+        この状態の膜電位を静止電位(resting potential)といい一般に$-70$\si{\milli\volt}ほどである。
 
-        %TODO: p3の下の方のパルスに関して
-        膜電位の変化は局所的に発生し、これが軸索を通じて他のシナプスに信号を伝える。
-        %TODO: p3以降のまとめと、それ以前のまとめなおし
+        膜電位がある一定の値(おおよそ$-50$\si{\milli\volt}から$-40$\si{\milli\volt})まで上がると、細胞膜上の電位依存性のナトリウムイオンチャネルが開く。
+        すると電位差によりナトリウムイオン(1荷の正イオン)が体液内から細胞内に入ってくる。
+        これにより膜電位は大きく上昇し、膜電位が約$40$\si{\milli\volt}ほどになると電位依存性のナトリウムイオンチャネルは閉じる。
+        それとほぼ同時に電位依存性のカリウムイオンチャネルが開く。
+        このとき、膜電位が正であることと細胞内にカリウムイオンが多く存在することから、カリウムイオンは細胞内から体液内へと移動する。
+        これにより膜電位は大きく下がる。
+        膜電位が約$-70$\si{\milli\volt}程度(もうちょっと小さく?)になると電位依存性のカリウムイオンチャネルは閉じる。
+        これ以降はカリウムイオンチャネルのみが開いている状態のため通常の状態に戻り膜電位は静止電位に戻る。
+        膜電位が一定の値を越えてからのこの一連の流れが発生することを発火(fire)するもしくは興奮(excite)するという。
+        また、神経細胞が発火する膜電位の値のことをしきい値(threshold)といい、発火したときの膜電位の値を活動電位(action potential)という。
+
+        発火している時間はだいだい同じであり、1度しきい値を越えれば自動的に膜電位が増減するため同じような膜電位の増減のしかたをする。
+        また、発火している最中に重ねて発火するようなことは起きないため発火すればどの神経細胞も同じような膜電位の増減のしかたをする。
+        この膜電位の増減は細胞膜上をつたわる。
+        この膜電位の上昇が軸索をとおりシナプスへ伝わることで、シナプスが別の神経細胞へ信号を伝える。
+        シナプスが他の神経細胞へ信号を伝える際、シナプスは伝達物質を用いるが、これには興奮性の物質と抑制性の物質がある。
+        どちらの物質を出すかはシナプスによって決まっている。
+        神経細胞は他の神経細胞とのシナプスから伝達物質を受け取ると膜電位が上昇する。
+
+        神経細胞を信号処理器と捉えると、軸索(もしくはシナプス)は出力、細胞膜や樹状突起は入力とみることができる。
+        複数の他神経細胞から伝達物質を受取り膜電位がしきい値を越えると、発火しそれを他の神経細胞へ伝えるという過程は非線形なふるまいであり、これが脳の高性能な処理能力の所以であるとされる。
+
+        % 軸索はとことどころ絶縁体で覆われていて、これにより信号が早く伝わるらしい
 
     \subsection{神経細胞のモデル}
     \subsection{シナプスの可塑性}
+    % ヘブの原理は実際に起こっている -> SNNの学習はこれを用いる
     \subsection{ニューラルネットワークの分類}
       \subsubsection{階層型ニューラルネットワーク}
       \subsubsection{相互結合型ニューラルネットワーク}
@@ -300,10 +339,10 @@
           \sum^n_{j=1} w^{M, O}_{j} o^M_j - \theta^O = \sum^{n+1}_{j=1} w^{M, O}_{j} o^M_j = \vect{w}^{M, O} \cdot \vect{o}^M = 0
         \end{equation}
         という$n+1$次元の超平面を表わしていると考えると、認識することは入力パターンと対応する$\vect{o}^M$を超平面によって2つの集合にわけることと言いかえることができる。
-        認識することは、入力パターン$\vect{i}^I \in \{0, 1\}^m$を座標変換によって$\vect{o}^M \in \{0, 1\}^{n+1}$へと変換し$\vect{o}^M$を$n+1$次元の超平面によって2つの集合のどちらかに分類わけすることと言いかえることができる。
+        認識することは、入力パターン$\vect{i}^I \in \{0, 1\}^m$を座標変換によって$\vect{o}^M \in \{0, 1\}^{n+1}$へと変換し$\vect{o}^M$を$n$次元の超平面によって2つの集合のどちらかに分類わけすることと言いかえることができる。
 
-        また、単純パーセプトロンにおいて学習するパラメータはシナプス結合荷重$\vect{w}^{M, O}$のみであるため、入力パターン$\vect{i}^I$から$\vect{o}^M$への座標変換のパラメータは変化せずに$n+1$次元の超平面の係数のみが変化することとなる。
-        したがって、単純パーセプトロンの学習は入力パターンを適切に識別可能な$n+1$次元超平面を求めることと同値となる。
+        また、単純パーセプトロンにおいて学習するパラメータはシナプス結合荷重$\vect{w}^{M, O}$のみであるため、入力パターン$\vect{i}^I$から$\vect{o}^M$への座標変換のパラメータは変化せずに$n$次元の超平面の係数のみが変化することとなる。
+        したがって、単純パーセプトロンの学習は入力パターンを適切に識別可能な$n$次元超平面を求めることと同値となる。
         問題によってはどのような超平面を用いても正しく識別することができないものが存在し、逆に正しく識別することができる超平面が存在するとき線形分離可能という。
         \begin{dfn}[線形分離可能(linear separable)]
           %TODO
@@ -516,7 +555,6 @@
           \Delta w_{i, j} = -\eta \diffp{E}{w_{i, j}} \label{eq:pbp:delta rule 1}
         \end{equation}
         を加算することで誤差関数$E$の極小値(もしくは鞍点)へ近づくことができる。
-        %TODO: 多変数関数のテイラー展開を行なうことで、微分可能な関数には必ずこれを見たす eta が存在することを示せる
         これは最急降下法(steepest descent method もしくは gradient decent method)と呼ばれる。
 
         また、\cref{eq:pbp:neuron definition 1}と\cref{eq:pbp:neuron definition 2}から連鎖律により
@@ -528,7 +566,6 @@
         さらに\cref{eq:pbp:neuron definition 1}と\cref{eq:pbp:neuron definition 2}と\cref{eq:pbp:error function 1}から
         \begin{equation}
           \diffp{E}{o_{p, j}} = o_{p, j} - t_{p, j}
-          %TODO: どうも中間層出力層間の重みを学習する場合はこうなるらしいが...どういうこと?
         \end{equation}
         \begin{equation}
           \diffp{o_{p, j}}{u_{p, j}} = \diff{f}{x}[x = u_{p, j}]
@@ -551,6 +588,8 @@
       \subsubsection{誤差逆伝搬法}
         誤差逆伝搬法はフィードフォワード型の階層型ニューラルネットワークの教師あり学習(supervised learning)の代表的な方法である。
         入力パターンに対して計算された出力値と教師信号との誤差が小さくなるように、シナプス結合荷重を修正する。
+
+        誤差逆伝播法を用いることで入力層と中間層間での高次への写像も学習することができるため、線形分離可能でない問題に対しても適切なパラメータを学習することができる。
 
         実際の学習は、まず入力パターンに対して各ニューロンの出力値を計算し、その後計算された誤差から逆向きにシナプス結合荷重の修正値を計算する。
         生物のニューラルネットワークでは信号が逆向きに伝わることはないため、誤差逆伝搬法は実際の生物のモデルとしては適切でない。
@@ -672,8 +711,9 @@
         である。
 
         学習の際に修正するとき、各パターン毎に修正する方法と全パターンの修正量をまとめて後から修正する方法の2つがある。
-        前者を逐次修正法、後者を一括修正法という。
-        厳密に逐次修正法は全パターンに対する誤差の極小値を得るわけではないが学習率$\eta$を小さくすることで全パターンに対する誤差の極小値を得ることができる。%TODO: ????
+        前者を逐次修正法(またはオンライン学習)、後者を一括修正法(またはバッチ学習もしくはフルバッチ学習)という。
+        また、逐次修正法と一括修正法を合わせて、いくつかのパターン分の修正をまとめて行なうミニバッチ学習という方法も用いられる。
+        厳密に逐次修正法は全パターンに対する誤差の極小値を得るわけではないが学習率$\eta$を小さくすることで全パターンに対する誤差の極小値を得ることができる。%TODO: 確率的勾配降下法
 
       % 担当2始め
       \subsubsection{応用例}
@@ -691,8 +731,18 @@
         %TODO: ここまで p.40
 
       \subsubsection{ニューラルネットワークの構造とパラメータの与え方}
+        % 学習データが少ない状態で次元を上げると学習データが高次空間上で疎に分布することになる
+        % この状態で学習によって得られる境界は大く存在し、意味があまりない
+        % この場所にしか引くことができない境界の方が意味がある
+        % よって学習データを増やすことが大切であり、境界を引くことができるできるだけ小さい次元を選択することが重要となる
+        % 学習が収束しないからと無闇矢鱈に層数やニューロン数を上げるのではなく、できるだけ小さくすむようにする方がよい
+
+        % 教師信号に0.1や0.9を使うのは、入出力関数がシグモイドやtanhのときだけやで
 
       \subsubsection{誤差逆伝搬法の改良}
+        % 根本的な解決じゃない -> 大域的最小値が得られないという問題に対して、局所的最小値になりにくくするのはちがうじゃん？ってこと
+        % 慣性項を使う場合 alpha = 0.9 等のことが多いが、学習率は0.1、場合によっては0.01等とすることがおおい
+        % なんならetaを時間で変動させたりもする
       % 担当2終り
 
   \section{相互結合型ニューラルネットワークの情報処理}
